@@ -49,6 +49,15 @@ typedef enum {
   G_CHECKSUM_SHA256
 } GChecksumType;
 
+/**
+ * GChecksum:
+ *
+ * An opaque structure representing a checksumming operation.
+ * To create a new GChecksum, use g_checksum_new(). To free
+ * a GChecksum, use g_checksum_free().
+ *
+ * Since: 2.16
+ */
 typedef struct _GChecksum       GChecksum;
 
 gssize                g_checksum_type_get_length (GChecksumType checksum_type);
